# api/handler_ping.go
@@ -1,6 +1,9 @@
 package api
 
-import "github.com/gin-gonic/gin"
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/leegeobuk/household-ledger/api/resource"
+)
 
 //	@Tags			Basic
 //	@Summary		Ping
@@ -8,7 +11,7 @@ import "github.com/gin-gonic/gin"
 //	@Produce		json
 //	@Success		200	{string}	pong
 //	@Failure		500	{object}	resource.ResErr
-//	@Router			/api/ledger/ping [get]
+//	@Router			/api/household-ledger/ping [get]
 func (s *Server) Ping(c *gin.Context) {
-	OK(c, "pong")
+	resource.OK(c, "pong")
 }
