# api/routes.go
@@ -1,7 +1,8 @@
 package api
 
 import (
-	"github.com/leegeobuk/financial-ledger/docs"
+	"github.com/leegeobuk/household-ledger/api/mw"
+	"github.com/leegeobuk/household-ledger/docs"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
@@ -10,10 +11,12 @@ func (s *Server) setRoutes() {
 	docs.SwaggerInfo.Title = "Financial Ledger"
 	docs.SwaggerInfo.Description = "API document for Financial Ledger"
 	docs.SwaggerInfo.Version = "1.0"
-	ledger := s.router.Group("/api/ledger")
+	ledger := s.router.Group("/api/household-ledger")
 
 	// API Document (swagger)
 	ledger.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	ledger.GET("/ping", s.Ping)
 	ledger.GET("/time", s.Time)
+
+	ledger.POST("/ledger", mw.ValidateAddLedger, s.AddLedger)
 }
