# docs/swagger.json
@@ -4,7 +4,53 @@
         "contact": {}
     },
     "paths": {
-        "/api/ledger/ping": {
+        "/api/household-ledger/ledger": {
+            "post": {
+                "description": "Add ledger",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Basic"
+                ],
+                "summary": "Ledger",
+                "parameters": [
+                    {
+                        "description": "Add ledger request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/resource.ReqAddLedger"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/resource.ResAddLedger"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/resource.ResErr"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/resource.ResErr"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/household-ledger/ping": {
             "get": {
                 "description": "Ping",
                 "produces": [
@@ -30,7 +76,7 @@
                 }
             }
         },
-        "/api/ledger/time": {
+        "/api/household-ledger/time": {
             "get": {
                 "description": "Time",
                 "produces": [
@@ -58,6 +104,40 @@
         }
     },
     "definitions": {
+        "resource.ReqAddLedger": {
+            "type": "object",
+            "required": [
+                "date",
+                "description",
+                "income",
+                "user_id"
+            ],
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "income": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "resource.ResAddLedger": {
+            "type": "object",
+            "properties": {
+                "ledger_id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "resource.ResErr": {
             "type": "object",
             "properties": {
